templates/pure/style.css
/* ... */
.serendipity_title a:link,
.serendipity_title a:visited {
    text-decoration: none;
    border: 0 none;
    color: #222;
}
.serendipity_title a:hover {
    color: #ff4136;
}
.post {
    width: 100%;
    margin-top: .5em;
}
.post_info,
.serendipity_entryFooter {
    background-color: #fafafa;
    border: 1px solid #eee;
    border-radius: 4px;
    box-shadow: 1px 1px 2px rgba(111, 111, 111, 0.5);
    margin: 1rem auto;
    padding-left: .25em;
    padding-right: .25em;
    font-size: .938rem;
}
.post_info.listed_view .plainList li {
    display: inline-block;
}
.post_info.listed_view .plainList li:not(:first-of-type)::before {
    content: " | ";
    padding-right: .25em;
}
.post table,
.post_content table {/* yes, since within #extended id knot */
    display: inline-grid;
    max-width: 100%;
    width: auto;
    overflow: auto;
    border-collapse: separate;
    border: 1px solid #eee;
    padding: .5em; }
.serendipity_entry_author_self {}
.serendipity_entry_read_more {
    text-align: right;
    margin-top: 1.5em;
}
.serendipity_entry_date,
.serendipity_Entry_Date {
    margin: auto;
}
.serendipity_date {
    font-family: Verdana, Arial, Geneva, Helvetica, sans-serif;
    font-variant: all-petite-caps;
    font-size: 18px;
    font-size: 1.125rem;
    color: #333;
    margin: 0;
    text-align: right;
}
.post_more {
    font-size: 14px;
    font-size: .875rem;
    text-align: right;
    display: inherit;
    width: 100%;
    padding-right: 1em;
}
@media screen and (min-width: 1600px) {
    .post_more {
        margin-top: 2em;
    }
}
.serendipity_image_block + .post_more {
    margin-top: 1em;
}
img.serendipity_entryIcon {
    float: right;
    border: 0 none;
}


/** Event Plugins **/

li.post_category {
    margin-bottom: .5em;
}
.post_category span {
    font-weight: bold;
}

.serendipity_multilingualInfo {
    margin-bottom: 1em;
    font-weight: bold;
}
.serendipity_multilingualInfo a {
    font-weight: normal;
}

ul.staticpage_result li {
    list-style: disclosure-open;
    font-style: oblique;
    margin: 0;
}

#content > .serendipity_staticpage {
    margin: 0 1em;
}
/* analogue to post/serendipity_entry [ff] */
.serendipity_staticpage {
    line-height: 1.6;
}
.serendipity_staticpage header h2 {
    margin: .5em 0 1em 0;
    letter-spacing: 1px;
    text-transform: uppercase;
}
.staticpage_metainfo {
    width: 100%;
    display: inline-block;
}
.serendipity_staticpage .page_info {
    font-size: .875rem;
    width: 100%;
    display: inline-block;
}
.page_content blockquote {
    border-left: 5px solid #ccc;
    padding-left: 1em; }

.serendipity_freeTag {
    margin-bottom: 1em;
    font-weight: bold;
    width: 100%;
}
.serendipity_freeTag a {
    font-weight: initial;
}
.serendipity_freeTag_related {
    font-weight: bold;
}
.serendipity_freeTag_related ul li {
    margin-bottom: .5em;
}
.serendipity_Entry_Date.freetag_cloud {
    background-color: transparent;
    border: 1px solid #4D618A;
    padding: .5em;
    border-radius: .5rem;
    box-shadow: 1px 2px 3px #555;
}
.freetag_cloud .serendipity_freetag_taglist {
    background-color: #f4f8fc;
}
.serendipity_freetag_taglist {
    padding: 0 .25em !important;
    border-radius: .25em;
}

.newsbox {
    margin-top: 1em;
    border-color: azure; /* fieldset use a kind of ridge border default style so we need to make it thinner by color */
}
.newsbox legend {
    font-weight: bold;
    font-size: large;
    padding: 0 .25em;
    text-transform: uppercase;
    color: #666;
    margin-left: 75%;
}

@media only screen and (min-width: 640px) {
    .newsbox legend {
        margin-left: 85%;
    }
}
@media only screen and (min-width: 768px) {
    .newsbox legend {
        margin-left: 88%;
    }
}
@media only screen and (min-width: 860px) {
    .newsbox legend {
        margin-left: 90%;
    }
}
@media only screen and (min-width: 1024px) {
    .newsbox legend {
        margin-left: 86%;
    }
}
@media only screen and (min-width: 1200px) {
    .newsbox legend {
        margin-left: 90%;
    }
}

/** Comments **/

#serendipity_comment_page {
    margin: .5rem;
}

#trackbacks details > div {
    margin-left: 1.115em;
    padding-top: .25em;
    font-size: 14px;
    font-size: .875rem;
    line-height: 1.5;
    color: #686868;
}
#trackbacks summary em {
    font-size: 14px;
    font-size: .875rem;
}
.trackback details summary {
    cursor: pointer;
}
.trackback_author {
    display: block;
    margin: .5em 0;
    color: #222;
}
.js .trackback-hint {
    display: none;
}
.trackback.tb-odd {
    background-color: #eee; }

.post p.trackback-hint {
    margin-top: .5em;
    padding: .5em;
}

#c0 { /* a new unsaved comment preview only */
    border: 1px solid #ddd;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    padding: .625em; }
#captcha {
    max-width: 10em;
    width: auto;
}
ol.plainList > .comment {
    margin-bottom: 1.5em;
}
/* VIEWMODE_THREADED in entry comments */
ol.plainList > .comment.commentlevel-1 {
    margin-left: 1.5em;
}
ol.plainList > .comment.commentlevel-2 {
    margin-left: 3em;
}
ol.plainList > .comment.commentlevel-3 {
    margin-left: 4.5em;
}
ol.plainList > .comment.commentlevel-4 {
    margin-left: 6em;
}
ol.plainList > .comment.commentlevel-5 {
    margin-left: 7.5em;
}
ol.plainList > .comment.commentlevel-6 {
    margin-left: 9em;
}
ol.plainList > .comment.commentlevel-7 {
    margin-left: 10.5em;
}
ol.plainList > .comment.commentlevel-8 {
    margin-left: 12em;
}
ol.plainList > .comment.commentlevel-9,
ol.plainList > .comment.commentlevel-10,
ol.plainList > .comment.commentlevel-11,
ol.plainList > .comment.commentlevel-12,
ol.plainList > .comment.commentlevel-13,
ol.plainList > .comment.commentlevel-14,
ol.plainList > .comment.commentlevel-15,
ol.plainList > .comment.commentlevel-16 {
    margin-left: 13.5em;
}
/* ... */

